2008-01-09  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/ViewManager.py: delete unneded method import_pkg
	* src/ArgHandler.py: fix import CompressionError instead of CompressError 
	* src/gen/proxy/filter.py: fix not needed family= line

2008-01-08  Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_MenuOptions.py:
	Fix 0001539: Tab order incorrect - Statistics Chart configuration

2008-01-08  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py:
	Fix 0001515: GraphViz reports don't register page margins on 
	report_options.xml

2008-01-08  Brian Matherly <brian@gramps-project.org>
	* src/plugins/AncestorChart.py:
	* src/plugins/DescendChart.py: 
	Fix 0001228: Descendent Chart doesn't respect the margin

2008-01-08  Brian Matherly <brian@gramps-project.org>
	* src/DisplayModels/_BaseModel.py: Fix 0001554: Select Place search
	
2008-01-08 Jim Sack <jgsack@san.rr.com>
	src/gen/utils/test/callback_test.py : add comment about
	intentional Error from call to undefined function

2008-01-08  Benny Malengier <benny.malengier@gramps-project.org>
	* src/ArgHandler.py: bug with tarfile exceptions

2008-01-08  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/Editors/_EditFamily.py: import fixes
	* src/plugins/FindDupes.py: variable typo fix
	0001428: In EditFamily: NameError

2008-01-08  Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_BackRefList.py: don't do sel change when dirty

2008-01-08  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/Editors/_EditFamily.py: 0001428: In EditFamily: NameError. 
	changed db -> self.db

2008-01-07  Benny Malengier <benny.malengier@gramps-project.org>
            Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/Bookmarks.py: bookmark dup warning, bug 1346

2008-01-07  Benny Malengier <benny.malengier@gramps-project.org>
	* src/DbManager.py: bug with creation/rename

2008-01-07  Benny Malengier <benny.malengier@gramps-project.org>